<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_title">About · DNA</string>
    <string name="app_chooser_search_hint">Enter the application name/package name to search</string>
    <string name="app_name">DNA-Android</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appliction_author">Author: tao1996, Meeting is fate</string>
    <string name="appliction_desc">Version: 2.0</string>
    <string name="appliction_name">D·N·A Tool</string>
    <string name="author_name" />
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">OK</string>
    <string name="btn_copy_output">Copy output</string>
    <string name="btn_execute">Add</string>
    <string name="btn_exit">Quit</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_skip">Goto</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy_fail">Copy failed</string>
    <string name="copy_success">Copied successfully</string>
    <string name="do_not_empty">Cannot be empty</string>
    <string name="engine_version_name">Created based on [Kr-Script4.0.3]</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_root">Failed to obtain ROOT permission, please click to skip in non-root mode! ! !</string>
    <string name="error_su_timeout">Waiting for ROOT permission to time out, please check whether the permission manager is running in the background!</string>
    <string name="execute_fail">Execution failed</string>
    <string name="execute_success">Execution Succeed</string>
    <string name="execute_wait">Executing, please wait...</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="float_monitor_tips">Double-click the floating window to close it, or hold down and drag to adjust its position.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_chooser_search_hint">Search options</string>
    <string name="item_view_role_description">Tab</string>
    <string name="kr_auto_run_item_losted">The specified item is missing</string>
    <string name="kr_bg_task_start">Background task starts running</string>
    <string name="kr_bg_task_start_desc">You can view task running progress and logs through the system notification center</string>
    <string name="kr_color_picker">Pick a color, please</string>
    <string name="kr_download_completed">File download successful</string>
    <string name="kr_download_confirm">Whether to download files</string>
    <string name="kr_download_create_fail">Failed to create download task</string>
    <string name="kr_download_create_success">Start downloading file</string>
    <string name="kr_download_downloading">File downloading</string>
    <string name="kr_hidden_task_running">The hand speed is too fast, the last operation has not been completed yet!</string>
    <string name="kr_invalid_color">The entered color value is invalid. Only formats similar to #ff88aa00 are supported.</string>
    <string name="kr_lock_message">This feature is locked</string>
    <string name="kr_page_after_load">Configuration parsing completed</string>
    <string name="kr_page_before_load">Prepare to parse configuration</string>
    <string name="kr_page_load_fail">Page load failed</string>
    <string name="kr_page_load_success">Page loaded successfully</string>
    <string name="kr_page_loading">Parsing configuration</string>
    <string name="kr_page_sh_file_permission">Specified configuration file does not exist or does not have read permission.</string>
    <string name="kr_page_sh_invalid">Invalid page configuration output</string>
    <string name="kr_param_load">Get status</string>
    <string name="kr_param_options_load">Loading </string>
    <string name="kr_params_render">Rendering interface...</string>
    <string name="kr_please_choose_app">Please select an application</string>
    <string name="kr_please_choose_file">Please select file</string>
    <string name="kr_please_choose_folder">Please select a directory</string>
    <string name="kr_please_input_color">Please enter color</string>
    <string name="kr_please_select">Select files</string>
    <string name="kr_script_config">kr-script.conf</string>
    <string name="kr_script_task_finished">Mission ended</string>
    <string name="kr_script_task_has_error">An error occurred</string>
    <string name="kr_script_task_notification">Background task notification</string>
    <string name="kr_script_task_running">start operation</string>
    <string name="kr_sdk_discrepancy">System version does not match</string>
    <string name="kr_sdk_discrepancy_message">This function only runs on systems with SDK%d</string>
    <string name="kr_sdk_message" formatted="false">This function only runs on systems with SDK %d ~ %d</string>
    <string name="kr_sdk_overtop">System version is too high</string>
    <string name="kr_sdk_too_low">System version is too low</string>
    <string name="kr_shell_completed">Script ended</string>
    <string name="kr_shell_finish_error">Run finished with error</string>
    <string name="kr_shortcut_create">Add shortcut</string>
    <string name="kr_shortcut_create_desc">Do you want to add \"%s\" to the desktop for quick and easy use?</string>
    <string name="kr_shortcut_create_fail">Shortcut creation failed</string>
    <string name="kr_shortcut_create_success">A request to create a shortcut has been sent</string>
    <string name="kr_slice_activity_fail">Unable to open event~</string>
    <string name="kr_slice_script_result">Script output content</string>
    <string name="kr_ushortcut_nsupported">This feature does not support adding shortcuts</string>
    <string name="kr_write_external_storage">Read and write external storage permissions are required!</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="monitor_cache_cleared">RAM reclaimed for cache</string>
    <string name="monitor_core_count">%d cores</string>
    <string name="monitor_laod">Load: %d%%</string>
    <string name="monitor_ram_cleared">RAM is defragmented</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="onloading">loading data…</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="transparent_ui">Transparent UI</string>
</resources>