<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/dialogRoot">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/confirm_dialog_bg"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="11dp"
            android:textColor="#ffaaaaaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"/>
        <TextView
            android:textSize="11dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/appliction_desc"/>
        <TextView
            android:textSize="36dp"
            android:textColor="@color/wb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/appliction_name"
            android:textAlignment="center"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/appliction_author"/>
        <LinearLayout
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">
                <Switch
                    android:textSize="12sp"
                    android:textColor="#ff888888"
                    android:id="@+id/transparent_ui"
                    android:padding="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transparent_ui"
                    android:switchPadding="6dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">
                <TextView
                    android:textSize="11dp"
                    android:textColor="#ffaaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/author_name"
                    android:textAlignment="textEnd"/>
                <TextView
                    android:textSize="11dp"
                    android:textColor="#ffaaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/engine_version_name"
                    android:textAlignment="textEnd"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
