<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/dialogRoot">
    <RelativeLayout
        android:id="@+id/search_bar"
        android:background="@drawable/dialog_search_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:textSize="15dp"
            android:id="@+id/search_box"
            android:background="@null"
            android:nextFocusDown="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/app_chooser_search_hint"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="30"
            android:imeOptions="actionSearch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
        <ImageButton
            android:id="@+id/search_box_clear"
            android:background="@null"
            android:padding="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dialog_search_clear"
            android:scaleType="centerInside"
            android:tint="?android:attr/textColorPrimary"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/select_all_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/select_all"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <com.omarea.common.ui.OverScrollListView
        android:id="@+id/app_list"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        android:layout_weight="1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_marginEnd="8dp"
            style="@style/dialogCancelBtn"/>
        <Button
            android:id="@+id/btn_confirm"
            android:text="@string/btn_confirm"
            style="@style/dialogConfirmBtn"/>
    </LinearLayout>
</LinearLayout>
