<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/dialogRoot">
    <RelativeLayout
        android:id="@+id/search_bar"
        android:background="@drawable/dialog_search_bg"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:textSize="15dp"
            android:id="@+id/search_box"
            android:background="@null"
            android:nextFocusDown="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/item_chooser_search_hint"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="30"
            android:imeOptions="actionSearch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
        <ImageButton
            android:id="@+id/search_box_clear"
            android:background="@null"
            android:padding="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dialog_search_clear"
            android:scaleType="centerInside"
            android:tint="?android:attr/textColorPrimary"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/dialog_title"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            style="@style/dialogTitle"/>
        <TextView
            android:id="@+id/dialog_desc"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            style="@style/dialogDesc"/>
    </FrameLayout>
    <ListView
        android:id="@+id/item_list"
        android:background="@drawable/confirm_dialog_bg"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:overScrollMode="never"
        android:paddingEnd="5dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_marginEnd="8dp"
            style="@style/dialogCancelBtn"/>
        <Button
            android:id="@+id/btn_confirm"
            android:text="@string/btn_confirm"
            style="@style/dialogConfirmBtn"/>
    </LinearLayout>
</LinearLayout>
